struct ServerInfo {
    IP      string
    Port    int32
}

[AutoMsgID MsgDir:"client -> login"]
struct VerifyREQ {
    Version string
	Platform string
	UID string
}


[AutoMsgID]
struct VerifyACK {
	Code ResultCode
	Server ServerInfo
	Token string // 登录game的token
	NodeID string // 选中的一台game服务器ID
}


// 客户端Ping
[AutoMsgID MsgDir:"client -> agent"]
struct PingACK {

}

[AutoMsgID MsgDir:"client -> agent -> game"]
struct LoginREQ {
	NodeID string
	Token string
}


[AutoMsgID]
struct LoginACK {
	Code ResultCode
}