// 添加Service属性的消息会在生成接收代码封装,同时加到路由表中

enum ResultCode
{
	NoError = 0

	DBAccessFailed = 101

	AgentNotFound = 201
	AgentAddressError




	GameNotFound
}
